src/objects/ACETEncoderProConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Encoder Pro CS for codes and patterns</description>
    <fields>
        <fullName>ACETEncoderProConfigExternalID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ACETEncoderProConfigExternalID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>ACETEncoderProConfig</label>
</CustomObject>